--- a/app/index.vm
+++ b/app/index.vm
@@ -78,6 +78,8 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/services/Board.js"></script>
+    <script src="scripts/services/rand.js"></script>
     <!-- endbuild --><!-- scripts -->
     <!-- end-process-tags -->
 
