--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,7 +5,8 @@ $font-helvetica75: "HelveticaNeueW01-75Bold", "HelveticaNeueW02-75Bold", "Helvet
 
 .container {
   margin: auto;
-  width: 300px;
+  width: 100%;
+
 }
 
 .hero-unit {
@@ -26,3 +27,84 @@ $font-helvetica75: "HelveticaNeueW01-75Bold", "HelveticaNeueW02-75Bold", "Helvet
   line-height: 1;
   letter-spacing: -1px;
 }
+
+.cell{
+  width: 35px;
+  height: 35px;
+  display: inline-block;
+  margin: 1px -0.5px;
+  box-shadow: 0 0 1px 1px rgba(0,0,0,0.5);
+  font-weight:bold;
+
+}
+
+.flag{
+  background-image: url('../images/flag5.png');
+  background-size: 100%;
+}
+
+
+.notrevealed{
+  color: transparent;
+}
+
+.game{
+  margin: 50px 0 0 0;
+  text-align: center;
+}
+
+.submit{
+  float: right;
+}
+
+.form-group{
+  height: 17px;
+  width: 640px;
+  margin: 35px auto;
+  background: rgba(93, 128, 89, 0.56);
+  border: 1px solid rgba(255, 0, 0, 0.56);
+  box-shadow: 0 0 5px 5px rgba(0,0,0,0.5);
+
+}
+
+textarea {
+    resize: none;
+}
+
+.revealed.mine{
+  background-image: url('../images/bomb.png');
+  background-size: 100%;
+  color: transparent;
+}
+
+.zero{
+  color: transparent;
+}
+html{
+  background-image: url('../images/back3.jpeg');
+  background-size: 100%;
+
+}
+//
+//html {
+//  /* fallback */
+//  background-color: #2F2727;
+//  background-image: url(images/radial_bg.png);
+//  background-position: center center;
+//  background-repeat: no-repeat;
+//
+//  /* Safari 4-5, Chrome 1-9 */
+//  /* Can't specify a percentage size? Laaaaaame. */
+//  background: -webkit-gradient(radial, center center, 0, center center, 460, from(#1a82f7), to(#2F2727));
+//
+//  /* Safari 5.1+, Chrome 10+ */
+//  background: -webkit-radial-gradient(circle, #1a82f7, #2F2727);
+//
+//  /* Firefox 3.6+ */
+//  background: -moz-radial-gradient(circle, #1a82f7, #2F2727);
+//
+//  /* IE 10 */
+//  background: -ms-radial-gradient(circle, #1a82f7, #2F2727);
+//
+//  /* Opera couldn't do radial gradients, then at some point they started supporting the -webkit- syntax, how it kinda does but it's kinda broken (doesn't do sizing) */
+//}
